--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,6 @@
 ---
+import { ParseStatus } from "astro:schema";
+
 
 ---
 
@@ -12,5 +14,6 @@
 	</head>
 	<body>
 		<h1>Astro</h1>
+		<p>hello world</p>
 	</body>
 </html>
