--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -13,11 +13,12 @@ import { ParseStatus } from "astro:schema";
 		<title>Astro</title>
 	</head>
 	<body>
-		<a href="/">Home</a>
+        <a href="/">Home</a>
         <a href="/about/">About</a>
-		<a href="/blog/">Blog</a>
-		
-		<h1>Astro</h1>
-		<p>hello world</p>
+        <a href="/blog/">Blog</a>
+
+        <h1>My Astro Site</h1>
+        <h1>My Astro Learning Blog</h1>
+        <p>This is where I will post about my journey learning Astro.</p>
 	</body>
 </html>
