--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,8 @@
 ---
 import { ParseStatus } from "astro:schema";
+import './styles/global.css';
 
+const pageTitle = "Home Page";
 
 ---
 
@@ -10,14 +12,14 @@ import { ParseStatus } from "astro:schema";
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
+		<title>{pageTitle}</title>
 	</head>
 	<body>
 		<a href="/">Home</a>
         <a href="/about/">About</a>
 		<a href="/blog/">Blog</a>
-		
-		<h1>Astro</h1>
-		<p>hello world</p>
+
+		<h1>{pageTitle}</h1>
+		<p>Hello World</p>
 	</body>
 </html>
