added nav + header

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,6 +1,9 @@
 ---
 import { ParseStatus } from "astro:schema";
 import './styles/global.css';
+import Header from './components/Header.astro';
+import Footer from './components/Footer.astro';
+
 
 const pageTitle = "About Me";
 
@@ -41,9 +44,7 @@ const textCase = "uppercase";
           </style>
 	</head>
 	<body>
-        <a href="/">Home</a>
-        <a href="/about/">About</a>
-        <a href="/blog/">Blog</a>
+    <Header />
 
 		<h1>{pageTitle}</h1>
         <h2>... and my new Astro site!</h2>
@@ -66,5 +67,6 @@ const textCase = "uppercase";
         {happy && <p>I am happy to be learning Astro!</p>}
         {finished && <p>I finished this tutorial!</p>}
         {goal === 3 ? <p>My goal is to finish in 3 days.</p> : <p>My goal is not 3 days.</p>}
+        <Footer />
 	</body>
 </html>
