--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,9 +1,11 @@
 ---
 import { ParseStatus } from "astro:schema";
 import './styles/global.css';
+import Header from './components/Header.astro';
+import Footer from './components/Footer.astro';
+
 
 const pageTitle = "My Astro Learning Blog";
-
 ---
 
 <html lang="en">
@@ -15,9 +17,7 @@ const pageTitle = "My Astro Learning Blog";
 		<title>{pageTitle}</title>
 	</head>
 	<body>
-        <a href="/">Home</a>
-        <a href="/about/">About</a>
-        <a href="/blog/">Blog</a>
+        <Header />
 
         <h1>{pageTitle}</h1>
         <p>This is where I will post about my journey learning Astro.</p>
@@ -27,5 +27,6 @@ const pageTitle = "My Astro Learning Blog";
 			<li><a href="/posts/post-2/">Post 2</a></li>
       		<li><a href="/posts/post-3/">Post 3</a></li>
 		</ul>
+		<Footer />
 	</body>
 </html>
