--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,11 @@
 ---
 import { ParseStatus } from "astro:schema";
 import './styles/global.css';
+import Header from './components/Header.astro';
+import Footer from './components/Footer.astro';
+
 
 const pageTitle = "Home Page";
-
 ---
 
 <html lang="en">
@@ -15,11 +17,10 @@ const pageTitle = "Home Page";
 		<title>{pageTitle}</title>
 	</head>
 	<body>
-		<a href="/">Home</a>
-        <a href="/about/">About</a>
-		<a href="/blog/">Blog</a>
+		<Header />
 
 		<h1>{pageTitle}</h1>
 		<p>Hello World</p>
+		<Footer />
 	</body>
 </html>
