added responsive navbar & script

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,5 +22,8 @@ const pageTitle = "Home Page";
 		<h1>{pageTitle}</h1>
 		<p>Hello World</p>
 		<Footer />
+		<script>
+			import "./scripts/menu.js";
+		</script>
 	</body>
 </html>
