--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -28,5 +28,8 @@ const pageTitle = "My Astro Learning Blog";
       		<li><a href="/posts/post-3/">Post 3</a></li>
 		</ul>
 		<Footer />
+		<script>
+			import "./scripts/menu.js";
+		</script>
 	</body>
 </html>
